08.12.2012 

Версия 3.0.23
[!] Появилась опция $_CONFIG['CACHE_MODE'], позволяющая подключать разные классы, отвечающие за кэширование. По умолчанию $_CONFIG['CACHE_MODE']="base", соответственно, подключается класс HolyCache_base.

Версия 3.0.22
[+] Добавлена функция удаления картинок-сироток в папке upload/pics или иной, указанный как папка для загрузки картинок. Удаляет все файлы, имеющиеся физически на диске, но отсутствующие в БД.

Версия 3.0.21
[-] Откат jQuery на версию 1.7.2 - с более новой глючит elFinder

Версия 3.0.20.3
[+] Мелкие багфиксы

Версия 3.0.20.2
[+] Теперь можно заходить в панель не только по пути /adm/, но и по /admin/

Версия 3.0.20.1
[*] Исправлен баг с множественными полями картинок и файлов.

Версия 3.0.20
[+] Добавлена страница с выводом phpinfo() в админке.

02.12.2012 Версия 3.0.19
[!] Возможность создавать подчиненные связи между блоками.

01.12.2012 Версия 3.0.18
[+] Для новых типов полей "image_multiple" и "file_multiple" теперь можно использовать функцию "PrepareFile" (указывать пути от корня сайта!)

Версия 3.0.17
[!] Отказ от лишних использований $_SERVER['DOCUMENT_ROOT'], переход на относительные пути и константы, см. пример _install/site/config.php

30.11.2012 Версия 3.0.16
[+] Добавлен компонент "Множественная загрузка файлов" c плагином JQuery Files Upload. При выборе _не нужно_ ставить галочку "множественное поле" - поле изначально множественное.

Версия 3.0.15
[*] Теперь изменения типа свойства блока физически (в таблице) меняют тип поля.

29.11.2012 Версия 3.0.14
[+] Множественная загрузка фото в фотоальбом теперь делается с помощью JQuery Files Upload
[-] Удален плагин "uploadify"
[+] В меню "лицензия" добавлен список сторонних решений, использованных в системе, ссылки на них
[*] Исправлен баг, связанный с введением прав - не отображалась кнопка редактирования (по клику на элемент все работало)

28.11.2012 Версия 3.0.13