@@ -2,6 +2,9 @@
 
 Версия 3.0.23
 [!] Появилась опция $_CONFIG['CACHE_MODE'], позволяющая подключать разные классы, отвечающие за кэширование. По умолчанию $_CONFIG['CACHE_MODE']="base", соответственно, подключается класс HolyCache_base.
+[!] Добавлена вариант для опции $_CONFIG['CACHE_MODE']="files" - хранение кэша в файлах.
+[!] Решена проблема кэширование комплексных компонентов - таким компонентам необходимо передавать параметр inner_cahce, а не cache.
+[*] Поправлены ошибки в кэшировании
 
 Версия 3.0.22
 [+] Добавлена функция удаления картинок-сироток в папке upload/pics или иной, указанный как папка для загрузки картинок. Удаляет все файлы, имеющиеся физически на диске, но отсутствующие в БД.
